Box view- tabs menu looks cut (bug 2604)
Also fixed mCustomScrollBar issue in RTL

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Box3.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Box3.less
@@ -520,6 +520,7 @@
 .boxFolderList {
     width: 100%; //
     height: 100%; //
+    padding-bottom:22px; //this enables the box folder popup on the last folder to open completely without being vertically truncated
 }
 
 .boxFolder, .createFolder {
