--- a/Zbang.Cloudents.Mvc4WebRole/Content/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/General.less
@@ -243,6 +243,9 @@ body {
             }
         }
     }
+    .mCS-dir-rtl > .mCSB_inside > .mCSB_container {
+        margin: 0; //override default jQuery mCustom Scrollbar code
+    }
 }
 
 body, h1, h2, h3, h4, h5, h6, ol, ul, input, button, img, p {
